# AzureIoTGatewaySDKExtention

./: README.md
modules/: CMakeLists.txt
modules/udp/: CMakeLists.txt
modules/udp/inc/: udp.h  udp2c.h
modules/udp/src/: udp2c.c  udp_receiver.cpp  udp_sender.cpp
modules/udp_generator/: CMakeLists.txt
modules/udp_generator/inc/: udp_generator.h
modules/udp_generator/src/: udp_generator.c
samples/: CMakeLists.txt  README.md
samples/udp_gateway/: CMakeLists.txt
samples/udp_gateway/src/: README.md  main.c  udp_gateway_sample_lin.json
